--- a/admin/package.json
+++ b/admin/package.json
@@ -23,6 +23,7 @@
     "react-scripts": "^5.0.1",
     "recharts": "^2.1.10",
     "redux-persist": "^6.0.0",
+    "styled-components": "^5.3.5",
     "timeago.js": "^4.0.2",
     "web-vitals": "^2.1.4"
   },
